--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "3.x.x",
-    "mongodb": "1.x.x"
+    "mongodb": "1.x.x",
+    "validator": "0.x.x"
   }
 }
